2008-09-04	Jannis Pohlmann <jannis@xfce.org>

	* autogen.sh: Add git svn revision versioning support.

2008-08-25	Brian J. Tarricone <kelnos@xfce.org>

	* settings/session/{Makefile.am,xfce-session-settings.desktop.in},
	  settings/splash/{Makefile.am,xfce-splash-settings.desktop.in},
	  xfce4-autostart-editor/xfce4-autostart-editor.desktop.in: Include
	  settings dialogs in the new settings manager.

2007-11-29	Benedikt Meurer <benny@xfce.org>

	* icons/, xfce4-autostart-editor/main.c: Add icon from
	  Jozsef Mak <jozmak@gmail.com> for the autostart editor.
	  Bug #3215.

2007-11-28	Benedikt Meurer <benny@xfce.org>

	* engines/simple/simple.c: Fix dialog layout. Bug #3287.
	* engines/simple/fallback.h, engines/simple/preview.h: Shut up
	  gcc.

2007-11-28	Benedikt Meurer <benny@xfce.org>

	* xfce4-session/xfce4-session.1: Apply patch from Alexander
	  Toresson <alexander.toresson@gmail.com> to fix typos in
	  the man page. Bug #3288.

2007-11-28	Benedikt Meurer <benny@xfce.org>

	* engines/balou/config.c, engines/simple/simple.c: Use
	  GtkFileChooser instead of XfceFileChooser. Bug #3492.

2007-07-20	Benedikt Meurer <benny@xfce.org>

	* xfce4-session/shutdown.c: Fix typo. Bug #3381.
	* configure.in.in: Update for new autoconf.
	* po/*.po, po/xfce4-session.pot: Update translations.
	* po/de.po: Update german translation.

2007-01-28	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Fix broken version number of libxfcegui4 dependency.
	  Bug #2824.

2007-01-20	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Post-release version bump.

2007-01-20	Benedikt Meurer <benny@xfce.org>

	* === Released 4.4.0 ===
	* NEWS, configure.in.in: Bump version.
	* configure.in.in: Update dependencies.
	* po/*.po: Update Project-Id-Version.
	* xfce4-session/xfsm-fadeout.c: stipple_data is only required with
	  GTK+ < 2.8.0.

2006-12-21	Benedikt Meurer <benny@xfce.org>

	* libxfsm/xfsm-util.c, xfce4-session/shutdown.c: Apply Jasper's patch