@@ -10,3 +10,4 @@ Categories=X-XFCE;Settings;DesktopSettings;X-XfceSettingsDialog;
 OnlyShowIn=XFCE;
 _GenericName=Sessions and Startup Settings
 _X-XfceSettingsName=Sessions and Startup
+X-XfcePluggable=true
