@@ -1,6 +1,7 @@
 /* $Id$ */
 /*-
  * Copyright (c) 2003-2006 Benedikt Meurer <benny@xfce.org>
+ * Copyright (c) 2008 Jannis Pohlmann <jannis@xfce.org>
  * All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
@@ -28,6 +29,9 @@
 #endif
 #ifndef HAVE_STRING_H
 #include <string.h>
+#endif
+#ifdef HAVE_STDLIB_H
+#include <stdlib.h>
 #endif
 
 #ifdef XFCE_DISABLE_DEPRECATED
@@ -85,6 +89,17 @@ static GtkWidget   *splash_author1;
 static GtkWidget   *splash_www0;
 static GtkWidget   *splash_www1;
 static GtkTooltips *tooltips = NULL;
+
+
+/*
+   Command line options
+ */
+static gboolean     opt_socket_id;
+static GOptionEntry entries[] =
+{
+  { "socket-id", 's', G_OPTION_FLAG_IN_MAIN, G_OPTION_ARG_INT, &opt_socket_id, N_("Settings manager socket"), N_("SOCKET ID") },
+  { NULL }
+};
 
 
 /*
@@ -335,7 +350,7 @@ splash_selection_changed (GtkTreeSelection *selection)
 
 
 static void
-settings_dialog_new ()
+settings_dialog_new (GtkWidget **plug_child)
 {
   GtkTreeSelection  *selection;
   GtkTreeViewColumn *column;
@@ -421,6 +436,8 @@ settings_dialog_new ()
   gtk_box_pack_start (GTK_BOX (GTK_DIALOG (splash_dialog)->vbox), hbox,
                       TRUE, TRUE, 0);
   gtk_widget_show (hbox);
+
+  *plug_child = hbox;
 
   vbox = gtk_vbox_new (FALSE, 6);
   gtk_container_set_border_width (GTK_CONTAINER (vbox), 6);
@@ -569,19 +586,51 @@ settings_dialog_new ()
 int
 main(int argc, char **argv)
 {
-    #ifdef ENABLE_NLS
-    bindtextdomain (GETTEXT_PACKAGE, LOCALEDIR);
-    bind_textdomain_codeset (GETTEXT_PACKAGE, "UTF-8");
-    textdomain (GETTEXT_PACKAGE);
-    #endif
+  GtkWidget *plug;
+  GtkWidget *plug_child;
+  GError    *error = NULL;
 
-    gtk_init(&argc, &argv);
+  #ifdef ENABLE_NLS
+  bindtextdomain (GETTEXT_PACKAGE, LOCALEDIR);
+  bind_textdomain_codeset (GETTEXT_PACKAGE, "UTF-8");
+  textdomain (GETTEXT_PACKAGE);
+  #endif
 
-    settings_dialog_new ();
-    
+  if (G_UNLIKELY (!gtk_init_with_args (&argc, &argv, "", entries, PACKAGE, &error)))
+    {
+      if (G_LIKELY (error != NULL))
+        {
+          g_print ("%s: %s.\n", G_LOG_DOMAIN, error->message);
+          g_print (_("Type '%s --help' for usage."), G_LOG_DOMAIN);
+          g_print ("\n");
 
-    gtk_dialog_run(GTK_DIALOG(splash_dialog));
+          g_error_free (error);
+        }
+      
+      return EXIT_FAILURE;
+    }
 
-    return 0;
-    
+  settings_dialog_new (&plug_child);
+
+  if (G_UNLIKELY (opt_socket_id == 0))
+    {
+      gtk_dialog_run (GTK_DIALOG (splash_dialog));
+    }
+  else
+    {
+      /* Create plug widget */
+      plug = gtk_plug_new (opt_socket_id);
+      gtk_widget_show (plug);
+
+      /* Reparent the plug child widget */
+      gtk_widget_reparent (plug_child, plug);
+      gtk_widget_show (plug_child);
+
+      splash_unload_modules ();
+
+      /* Enter main loop */
+      gtk_main ();
+    }
+
+  return 0;
 }
