@@ -10,3 +10,4 @@ Categories=X-XFCE;Settings;DesktopSettings;X-XfceSettingsDialog;
 OnlyShowIn=XFCE;
 _GenericName=Splash Screen Settings
 _X-XfceSettingsName=Splash Screen
+X-XfcePluggable=true
