@@ -1,3 +1,11 @@
+2008-09-14	Jannis Pohlmann <jannis@xfce.org>
+
+	* settings/session/session.c, settings/splash/splash.c: Add embedding
+	  support to the xfce4-session settings dialogs.
+	* settings/session/xfce4-session-settings.desktop.in,
+	  settings/splash/xfce4-splash-settings.desktop.in: Add X-XfcePluggable=true
+		to both desktop files.
+
 2008-09-04	Jannis Pohlmann <jannis@xfce.org>
 
 	* autogen.sh: Add git svn revision versioning support.
